; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_socket.c_skynet_socket_connect.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_socket.c_skynet_socket_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

@SOCKET_SERVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @skynet_socket_connect(%struct.skynet_context* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.skynet_context*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.skynet_context* %0, %struct.skynet_context** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.skynet_context*, %struct.skynet_context** %4, align 8
  %9 = call i32 @skynet_context_handle(%struct.skynet_context* %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* @SOCKET_SERVER, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @socket_server_connect(i32 %10, i32 %11, i8* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @skynet_context_handle(%struct.skynet_context*) #1

declare dso_local i32 @socket_server_connect(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
